--- a/inst/rmarkdown/templates/template-rmarkdown/template.yaml
+++ b/inst/rmarkdown/templates/template-rmarkdown/template.yaml
@@ -1,4 +1,4 @@
-name: Template para artigos
+name: Template para artigos - Gustavo Sabbag
 description: >
    Documento padrão para artigos e projetos em rmarkdown com diversas ferramentas já.
 create_dir: FALSE
